--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -4,7 +4,10 @@ on:
   schedule:
     # Run daily at 5 AM UTC
     - cron: '0 3 * * *'
-
+  push:
+    branches:
+      - main
+      
 jobs:
   update-qld-stock-data:
     runs-on: ubuntu-latest
