--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -28,6 +28,6 @@ jobs:
 
     - name: Run the script to update QLD stock data
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the secret here
+        TOKEN: ${{ secrets.TOKEN }}  # Use the secret here
       run: |
         python main.py
