--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -4,9 +4,9 @@ on:
   schedule:
     # Run daily at 5 AM UTC
     - cron: '0 3 * * *'
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
       
 jobs:
   update-qld-stock-data:
